adding static files

--- a/views/shop.html
+++ b/views/shop.html
@@ -4,53 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
-    <style>
-        .body{
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        .main-header {
-            width: 100%;
-            height: 56px;
-            background-color: rgb(68, 136, 214);
-            padding: 0 1.5rem;
-        }
-        .main-header_item-list {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        .main-header_item{
-            margin: 0 1rem;
-            padding: 0;
-
-        }
-        .main-header_item a{
-            text-decoration: none;
-            color: white;
-        }
-        .main-header_nav{
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-        .main-header_item a:hover,
-        .main-header_item a:active,
-        .main-header_item a:active{
-            color: red;
-        }
-
-
-    </style>
+   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <header class="main-header">
         <nav class="main-header_nav">
             <ul class="main-header_item-list">
-                <li class="main-header_item"><a class="active" href="/m">Shop</a></li>
-                <li class="main-header_item"><a href="/add-product">Add Product</a></li>
+                <li class="main-header_item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header_item"><a href="/m">Add Product</a></li>
             </ul>
         </nav>
     </header>
